--- a/src/index.css
+++ b/src/index.css
@@ -271,3 +271,45 @@ section:not(:first-child) {
 #programs .section-dots div:nth-child(3) {
   background-color: var(--hero-grey);
 }
+
+.programs-content button {
+  font-family: inherit;
+  font-size: 1rem;
+  font-weight: 900;
+  background-color: transparent;
+  border: none;
+  border-radius: 10px;
+  padding: 20px 50px;
+  cursor: pointer;
+}
+.programs-content button:focus {
+  background-color: var(--hero-grey);
+  color: var(--hero-green);
+}
+
+#fsw {
+  background-color: var(--hero-grey);
+  border-radius: 20px;
+}
+
+.fsw-content {
+  padding: 20px;
+}
+
+.fsw-header {
+  font-size: 22px;
+}
+
+.fsw-header span:nth-child(1) {
+  color: var(--se-green);
+  font-size: 22px;
+}
+
+#fsw span:nth-child(2) {
+  color: var(--se-white);
+}
+
+.fsw-info {
+  color: var(--se-white);
+  font-weight: 400;
+}
