--- a/src/index.css
+++ b/src/index.css
@@ -523,3 +523,12 @@ section:not(:first-of-type) {
   gap: 20px;
   padding: 30px 40px;
 }
+
+.contact-form input {
+  padding: 8px 16px;
+}
+
+input::placeholder {
+  font-family: 'Noto Sans Mono', sans-serif;
+  font-weight: 400;
+}
