--- a/src/utility.css
+++ b/src/utility.css
@@ -77,16 +77,16 @@
   color: var(--se-green) !important;
 }
 .text-grey {
-  color: var(--se-grey);
+  color: var(--se-grey) !important;
 }
 .text-medium-grey {
-  color: var(--se-medium-grey);
+  color: var(--se-medium-grey) !important;
 }
 .text-light-grey {
-  color: var(--se-light-grey);
+  color: var(--se-light-grey) !important;
 }
 .text-dark-grey {
-  color: var(--se-dark-grey);
+  color: var(--se-dark-grey) !important;
 }
 
 /* font-weights */
@@ -105,13 +105,13 @@
 
 /* font-sizes */
 .font-22 {
-  font-size: 22px;
+  font-size: 22px !important;
 }
 .font-14 {
-  font-size: 14px;
+  font-size: 14px !important;
 }
 .font-15 {
-  font-size: 15px;
+  font-size: 15px !important;
 }
 
 /* border */
@@ -119,7 +119,7 @@
   border-radius: 50% !important;
 }
 .br-20 {
-  border-radius: 20px;
+  border-radius: 20px !important;
 }
 
 /* background-color */
