--- a/src/index.css
+++ b/src/index.css
@@ -583,6 +583,16 @@ input::placeholder {
   font-family: 'Noto Sans Mono', sans-serif;
 }
 
+/* footer */
 footer {
   padding: 70px;
+}
+
+footer a {
+  font-family: 'Noto Sans Mono', sans-serif;
+  text-decoration: none;
+}
+
+#se-footer {
+  margin-bottom: 12px;
 }
