--- a/src/utility.css
+++ b/src/utility.css
@@ -41,11 +41,17 @@
 .grow {
   flex-grow: 1;
 }
+.gap-9 {
+  gap: 9px;
+}
 .gap-10 {
   gap: 10px;
 }
 .gap-20 {
   gap: 20px;
+}
+.gap-60 {
+  gap: 60px;
 }
 
 .util-button {
