--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ html,
 body {
   margin: 0;
   padding: 0;
+  scroll-behavior: smooth;
 }
 
 .body {
@@ -102,8 +103,13 @@ nav div {
   text-align: right;
 }
 .hero-left-button {
-  background-color: black;
+  background-color: rgba(35, 35, 35, 0.9);
   color: var(--se-white);
+}
+.hero-left-button a,
+.hero-right-button b {
+  color: inherit;
+  text-decoration: none;
 }
 
 @keyframes color-transition {
@@ -117,6 +123,23 @@ nav div {
   }
   100% {
     background-color: var(--se-white);
+  }
+}
+#flicker {
+  animation: flicker linear 2s infinite;
+}
+@keyframes flicker {
+  0% {
+    opacity: 1;
+  }
+  33.33% {
+    opacity: 0;
+  }
+  66.66% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
   }
 }
 
