--- a/src/index.css
+++ b/src/index.css
@@ -36,8 +36,11 @@ nav {
   position: absolute;
   display: flex;
   width: 100%;
+
   max-width: 1340px;
   top: 70px;
+  left: 50%;
+  transform: translateX(-50%);
   z-index: 1;
 }
 
